--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>utfpr.ct.dainf.if62c.exemplos</groupId>
-    <artifactId>exemplo-matriz</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>java-pratica-matriz</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>FP2 :: Exemplo :: Matriz</name>
+    <name>Java :: Pratica :: Matriz</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
